--- a/test.html
+++ b/test.html
@@ -1,1 +1,4 @@
-<html> test </html>
+<html>
+  <iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=e5a30ce5-14a7-4ee0-bd82-1fe7183c0e93&room=DEFAULT_ROOM&iframe=true" width=800 height=640 allow="microphone; camera" >
+  </iframe> 
+</html>
