--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
 <html>
-  <div id="otEmbedContainer" style="width:800px; height:640px"></div> 
-  <script src="https://tokbox.com/embed/embed/ot-embed.js?embedId=e5a30ce5-14a7-4ee0-bd82-1fe7183c0e93&room=DEFAULT_ROOM"></script>
+  <iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=e5a30ce5-14a7-4ee0-bd82-1fe7183c0e93&room=DEFAULT_ROOM&iframe=true" width=800 height=640 allow="microphone; camera" >
+  </iframe> 
 </html>
